{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 79,
  "lineage": "e7ce51be-1fed-64b5-9dbc-d6014562a1fd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_group_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:370489250264:security-group/sg-0f961f444bf99d34d",
            "description": "Security group for EKS Node Group",
            "egress": [],
            "id": "sg-0f961f444bf99d34d",
            "ingress": [],
            "name": "myeks-node-group-sg",
            "name_prefix": "",
            "owner_id": "370489250264",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myeks-node-group-sg"
            },
            "tags_all": {
              "Name": "myeks-node-group-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c510ecf6dc5ef887"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "370489250264",
            "id": "sg-0f961f444bf99d34d",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.0.0/16"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-677194125",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0f961f444bf99d34d",
            "security_group_rule_id": "sgr-02b6f7f3d934902ac",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.node_group_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:370489250264:security-group/sg-06609638a99518d9a",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-06609638a99518d9a",
            "ingress": [],
            "name": "myeks-cluster-20260327133127243500000003",
            "name_prefix": "myeks-cluster-",
            "owner_id": "370489250264",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c510ecf6dc5ef887"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "370489250264",
            "id": "sg-06609638a99518d9a",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:370489250264:security-group/sg-0be352b519fed1211",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0be352b519fed1211",
            "ingress": [],
            "name": "myeks-node-20260327133127242500000002",
            "name_prefix": "myeks-node-",
            "owner_id": "370489250264",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-node",
              "Terraform": "true",
              "kubernetes.io/cluster/myeks": "owned"
            },
            "tags_all": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-node",
              "Terraform": "true",
              "kubernetes.io/cluster/myeks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c510ecf6dc5ef887"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "370489250264",
            "id": "sg-0be352b519fed1211",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-42902109",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-06609638a99518d9a",
            "security_group_rule_id": "sgr-0c5ac07a62d871471",
            "self": false,
            "source_security_group_id": "sg-0be352b519fed1211",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-149555589",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0be352b519fed1211",
            "security_group_rule_id": "sgr-019a174b17f1284a8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_10251_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 10251/tcp webhook",
            "from_port": 10251,
            "id": "sgrule-1923397478",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0be352b519fed1211",
            "security_group_rule_id": "sgr-006feca0d65fa37f1",
            "self": false,
            "source_security_group_id": "sg-06609638a99518d9a",
            "timeouts": null,
            "to_port": 10251,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1757146505",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0be352b519fed1211",
            "security_group_rule_id": "sgr-0003eb5d22f9d2bfc",
            "self": false,
            "source_security_group_id": "sg-06609638a99518d9a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-133391752",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0be352b519fed1211",
            "security_group_rule_id": "sgr-021d7396398ec71a5",
            "self": false,
            "source_security_group_id": "sg-06609638a99518d9a",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3467706910",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0be352b519fed1211",
            "security_group_rule_id": "sgr-0c96634b5a6ba1601",
            "self": false,
            "source_security_group_id": "sg-06609638a99518d9a",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3723312703",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0be352b519fed1211",
            "security_group_rule_id": "sgr-01ed2105b8c48f12a",
            "self": false,
            "source_security_group_id": "sg-06609638a99518d9a",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3108769268",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0be352b519fed1211",
            "security_group_rule_id": "sgr-0d8e600bd790c1f3f",
            "self": false,
            "source_security_group_id": "sg-06609638a99518d9a",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1189996317",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0be352b519fed1211",
            "security_group_rule_id": "sgr-08e2958fed6b09434",
            "self": false,
            "source_security_group_id": "sg-06609638a99518d9a",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2064586860",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0be352b519fed1211",
            "security_group_rule_id": "sgr-0eb32228bf05cfae6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-491382354",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0be352b519fed1211",
            "security_group_rule_id": "sgr-08578f6ebf524acc1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3105244605",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0be352b519fed1211",
            "security_group_rule_id": "sgr-085056d6aeb09dc8a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:370489250264:route-table/rtb-0af3d0eeed347bfd2",
            "default_route_table_id": "rtb-0af3d0eeed347bfd2",
            "id": "rtb-0af3d0eeed347bfd2",
            "owner_id": "370489250264",
            "propagating_vgws": null,
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-VPC-default"
            },
            "tags_all": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-VPC-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0c510ecf6dc5ef887"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:370489250264:security-group/sg-0dbdfb8114c3fc86b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0dbdfb8114c3fc86b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "370489250264",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-VPC-default"
            },
            "tags_all": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-VPC-default"
            },
            "vpc_id": "vpc-0c510ecf6dc5ef887"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df310e82aa672321",
            "arn": "arn:aws:ec2:ap-northeast-2:370489250264:elastic-ip/eipalloc-0df310e82aa672321",
            "domain": "vpc",
            "id": "eipalloc-0df310e82aa672321",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-13-209-116-130.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.116.130",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-VPC-ap-northeast-2a"
            },
            "tags_all": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-VPC-ap-northeast-2a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:370489250264:internet-gateway/igw-0815ed8af3e685cd8",
            "id": "igw-0815ed8af3e685cd8",
            "owner_id": "370489250264",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-IGW"
            },
            "tags_all": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-IGW"
            },
            "vpc_id": "vpc-0c510ecf6dc5ef887"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df310e82aa672321",
            "association_id": "eipassoc-05edae65721b166a8",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-06c0ddc6775764987",
            "network_interface_id": "eni-0fdc20fd4c6e74604",
            "private_ip": "192.168.2.122",
            "public_ip": "13.209.116.130",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02565fad338642622",
            "tags": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-NAT"
            },
            "tags_all": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-NAT"
            },
            "vpc_id": "vpc-0c510ecf6dc5ef887"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02008f3a1b84356f61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06c0ddc6775764987",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-02008f3a1b84356f6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "370489250264",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-02008f3a1b84356f6"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0815ed8af3e685cd8",
            "id": "r-rtb-011dbd8885b872e1d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-011dbd8885b872e1d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "370489250264",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-011dbd8885b872e1d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:370489250264:route-table/rtb-02008f3a1b84356f6",
            "id": "rtb-02008f3a1b84356f6",
            "owner_id": "370489250264",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-VPC-private"
            },
            "tags_all": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-VPC-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c510ecf6dc5ef887"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "370489250264",
            "id": "rtb-02008f3a1b84356f6",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:370489250264:route-table/rtb-011dbd8885b872e1d",
            "id": "rtb-011dbd8885b872e1d",
            "owner_id": "370489250264",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-VPC-public"
            },
            "tags_all": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-VPC-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c510ecf6dc5ef887"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "370489250264",
            "id": "rtb-011dbd8885b872e1d",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0686855cd7e0862f1",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-02008f3a1b84356f6",
            "subnet_id": "subnet-0d44c1fc85f91cb2b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fefe21b0bcd26ecd",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-02008f3a1b84356f6",
            "subnet_id": "subnet-09f39c6fcf08b60de"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8df228a313252f9",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-02008f3a1b84356f6",
            "subnet_id": "subnet-0b5bd5df0b05d7299"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de901ba2c0746d0a",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-011dbd8885b872e1d",
            "subnet_id": "subnet-02565fad338642622"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb6d1e5f7d0bd518",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-011dbd8885b872e1d",
            "subnet_id": "subnet-047ce451821aefe3e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de75c600e323f13e",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-011dbd8885b872e1d",
            "subnet_id": "subnet-0881c384e7cfe6504"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:370489250264:subnet/subnet-0d44c1fc85f91cb2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.12.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d44c1fc85f91cb2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "370489250264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-PrivateSubnet",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-PrivateSubnet",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c510ecf6dc5ef887"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "370489250264",
            "id": "subnet-0d44c1fc85f91cb2b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:370489250264:subnet/subnet-09f39c6fcf08b60de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "192.168.16.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f39c6fcf08b60de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "370489250264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-PrivateSubnet",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-PrivateSubnet",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c510ecf6dc5ef887"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "370489250264",
            "id": "subnet-09f39c6fcf08b60de",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:370489250264:subnet/subnet-0b5bd5df0b05d7299",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.20.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5bd5df0b05d7299",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "370489250264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-PrivateSubnet",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-PrivateSubnet",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c510ecf6dc5ef887"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "370489250264",
            "id": "subnet-0b5bd5df0b05d7299",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:370489250264:subnet/subnet-02565fad338642622",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.0.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02565fad338642622",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "370489250264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-PublicSubnet",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-PublicSubnet",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c510ecf6dc5ef887"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "370489250264",
            "id": "subnet-02565fad338642622",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:370489250264:subnet/subnet-047ce451821aefe3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "192.168.4.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047ce451821aefe3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "370489250264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-PublicSubnet",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-PublicSubnet",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c510ecf6dc5ef887"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "370489250264",
            "id": "subnet-047ce451821aefe3e",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:370489250264:subnet/subnet-0881c384e7cfe6504",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.8.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0881c384e7cfe6504",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "370489250264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-PublicSubnet",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-PublicSubnet",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c510ecf6dc5ef887"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "370489250264",
            "id": "subnet-0881c384e7cfe6504",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:370489250264:vpc/vpc-0c510ecf6dc5ef887",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0d0c45153f661c7df",
            "default_route_table_id": "rtb-0af3d0eeed347bfd2",
            "default_security_group_id": "sg-0dbdfb8114c3fc86b",
            "dhcp_options_id": "dopt-00a26e6470589ff1c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c510ecf6dc5ef887",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0af3d0eeed347bfd2",
            "owner_id": "370489250264",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-VPC"
            },
            "tags_all": {
              "Environment": "cloudneta-lab",
              "Name": "myeks-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "370489250264",
            "id": "vpc-0c510ecf6dc5ef887",
            "region": "ap-northeast-2"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}